[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "ivanbeginer",email = "vaniaiv468@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[all] (>=0.34.2,<0.35.0)",
    "make (>=0.1.6.post2,<0.2.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "faker (>=37.1.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
